<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/firstName"
        android:paddingLeft="6dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/streetAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstName"
        android:text="@string/street_address" />

    <TextView
        android:id="@+id/town"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/streetAddress"
        android:text="@string/town" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/streetAddress"
        android:layout_toRightOf="@+id/town"
        android:paddingLeft="6dp"
        android:text="@string/state" />

    <TextView
        android:id="@+id/zipCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/streetAddress"
        android:layout_toRightOf="@+id/state"
        android:paddingLeft="6dp"
        android:text="@string/zip_code" />

</RelativeLayout>